--- a/contato.html
+++ b/contato.html
@@ -10,6 +10,21 @@
     <header class="HeaderFooter">
       <h1>Header</h1>
     </header>
+    <form action="">
+      <label for="Nome">Nome:</label>
+      <input type="text" name="" id="Nome" />
+      <label for="Endereço">Endereço:</label>
+      <input type="text" name="" id="Endereço" />
+      <label for="Cidade">Cidade:</label>
+      <input type="text" name="" id="Cidade" />
+      <label for="Telefone">Telefone:</label>
+      <input type="text" name="" id="Telefone" />
+      <label for="Email">Email:</label>
+      <input type="text" name="" id="Email" />
+      <label for="Mensagem">Mensagem:</label>
+      <input type="text" name="" id="Mensagem" />
+      <textarea name="" id=""></textarea>
+    </form>
 
     <footer class="HeaderFooter">
       <p>Footer</p>
