--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
   </head>
   <body>
     <header class="HeaderFooter">
-      <a href="Contato"></a>
+      <div id="LogoImg">
+        <img src="./Imgs/LOGO" alt="" id="ImgLogo" />
+      </div>
+      <div>
+        <ul id="ContainerMenu">
+          <li class="Menu"><a href="./index.html">Inicio</a></li>
+          <li class="Menu"><a href="./sobre.html">Sobre</a></li>
+          <li class="Menu"><a href="./contato.html">Contato</a></li>
+        </ul>
+      </div>
     </header>
+
     <div id="Carrossel">
       <img id="Banner1" src="./Imgs/banner1.avif" alt="" />
     </div>
@@ -18,48 +28,33 @@
       <h2>Gallery</h2>
       <div id="Cards1">
         <div id="Card1" class="Cards">
-          <img class="ImgsCards" src="./Imgs/maqlavar.png" alt="" />
+          <img src="./Imgs/maqlavar.png" alt="" class="ImgsCards" />
           Imagem1
         </div>
         <div id="Card2" class="Cards">
-          <img class="ImgsCards" src="./Imgs/celular samsung.png" alt="" />
+          <img src="./Imgs/celular samsung.png" alt="" class="ImgsCards" />
           Imagem2
         </div>
         <div id="Card3" class="Cards">
-          <img class="ImgsCards" src="./Imgs/ferro de passar.png" alt="" />
+          <img src="./Imgs/ferro de passar.png" alt="" class="ImgsCards" />
           Imagem3
         </div>
         <div id="Card4" class="Cards">
-          <img class="ImgsCards" src="./Imgs/Iphone 12.png" alt="" />
+          <img src="./Imgs/Iphone 12.png" alt="" class="ImgsCards" />
           Imagem4
         </div>
       </div>
       <div id="Cards2">
         <div id="Card5" class="Cards">
-          <img
-            class="ImgsCards"
-            src="./Imgs/lavalouça.png"
-            alt=""
-            class="ImgsCards"
-          />
+          <img src="./Imgs/lavalouça.png" alt="" class="ImgsCards" />
           Imagem5
         </div>
         <div id="Card6" class="Cards">
-          <img
-            class="ImgsCards"
-            src="./Imgs/tablet.png"
-            alt=""
-            class="ImgsCards"
-          />
+          <img class="ImgsCards" src="./Imgs/tablet.png" alt="" />
           Imagem6
         </div>
         <div id="Card7" class="Cards">
-          <img
-            class="ImgsCards"
-            src="./Imgs/Televisão.png"
-            alt=""
-            class="ImgsCards"
-          />
+          <img src="./Imgs/Televisão.png" alt="" class="ImgsCards" />
           Imagem7
         </div>
         <div id="Card8" class="Cards">
@@ -69,7 +64,7 @@
       </div>
     </div>
 
-    <footer class="HeaderFooter">
+    <footer class="HeaderFooter" id="FooterId">
       <p>Footer</p>
     </footer>
   </body>
