--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="HeaderFooter">
       <div id="LogoImg">
-        <img src="./Imgs/LOGO" alt="" id="ImgLogo" />
+        <img src="./Imgs/Logo2.png" alt="" id="ImgLogo" />
       </div>
       <div>
         <ul id="ContainerMenu">
@@ -25,41 +25,34 @@
     </div>
 
     <div id="ContainerCard">
-      <h2>Gallery</h2>
       <div id="Cards1">
         <div id="Card1" class="Cards">
-          <img src="./Imgs/maqlavar.png" alt="" class="ImgsCards" />
-          Imagem1
+          <img src="./Imgs/celular redmi.png" alt="" class="ImgsCards" />
+          
         </div>
         <div id="Card2" class="Cards">
           <img src="./Imgs/celular samsung.png" alt="" class="ImgsCards" />
-          Imagem2
         </div>
         <div id="Card3" class="Cards">
-          <img src="./Imgs/ferro de passar.png" alt="" class="ImgsCards" />
-          Imagem3
+          <img src="./Imgs/celular redmi2.png" alt="" class="ImgsCards" />
+
         </div>
         <div id="Card4" class="Cards">
           <img src="./Imgs/Iphone 12.png" alt="" class="ImgsCards" />
-          Imagem4
         </div>
       </div>
       <div id="Cards2">
         <div id="Card5" class="Cards">
-          <img src="./Imgs/lavalouça.png" alt="" class="ImgsCards" />
-          Imagem5
+          <img src="./Imgs/camera.webp" alt="" class="ImgsCards" />
         </div>
         <div id="Card6" class="Cards">
           <img class="ImgsCards" src="./Imgs/tablet.png" alt="" />
-          Imagem6
         </div>
         <div id="Card7" class="Cards">
           <img src="./Imgs/Televisão.png" alt="" class="ImgsCards" />
-          Imagem7
         </div>
         <div id="Card8" class="Cards">
-          <img src="./Imgs/torradeira.png" alt="" class="ImgsCards" />
-          Imagem8
+          <img src="./Imgs/camera2.png" alt="" class="ImgsCards" />
         </div>
       </div>
     </div>
