--- a/sobre.html
+++ b/sobre.html
@@ -10,7 +10,7 @@
   <body>
     <header class="HeaderFooter">
       <div id="LogoImg">
-        <img src="./Imgs/LOGO" alt="" id="ImgLogo" />
+        <img src="./Imgs/Logo2.png" alt="" id="ImgLogo" />
       </div>
       <div>
         <ul id="ContainerMenu">
@@ -23,22 +23,21 @@
     <div id="Sobre">
       <h1>Sobre a Nossa Empresa</h1>
       <p>
-        Bem-vindo(a) à nossa página "sobre"! Somos uma empresa dedicada a [breve
-        descrição do que a empresa faz].
+        Bem-vindo(a) à nossa página "sobre"! Somos uma empresa dedicada à venda e manutenção de produtos eletrônicos. 
+        
       </p>
-      <p>Nossa missão é [detalhe a missão da empresa].</p>
+      <p>Nossa missão é te ajudar a escolher um aparelho perfeito para você.</p>
 
       <h2>Nossa História</h2>
       <p>
         Começamos em 2019 com o objetivo de proporcionar mais oportunidades para
         o crescimento e desenvolvimento de nossos parceiros. Desde então, temos
-        crescido e evoluído para nos tornar [descreva o que a empresa se
-        tornou].
+        crescido e evoluído para nos tornar uma empresa que, não somente fornece produtos mas sementes para o futuro.
       </p>
 
       <h2>Nossa Equipe</h2>
-      <img src="imagem-equipe.jpg" alt="Foto da Equipe" />
-      <p>Conheça alguns dos membros da nossa equipa:</p>
+      <img src="./Imgs/Img Equipe.avif" alt="Foto da Equipe" />
+      <p>Conheça alguns dos membros da nossa equipe:</p>
       <ul>
         <li><strong>Susana</strong> - Gerente de Vendas</li>
         <li><strong>Diego</strong> - Gerente de Finanças</li>
